--- a/src/components/Movie.module.css
+++ b/src/components/Movie.module.css
@@ -22,19 +22,19 @@
     box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
       0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
 }
-.movie__title,
-.movie__year {
+.movie_title,
+.movie_year {
   margin: 0;
-  font-weight: 300;
+  font-weight: 300px;
   text-decoration: none;
 }
-.movie__title a {
+.movie_title a {
   margin-bottom: 5px;
   font-size: 24px;
   color: #2c2c2c;
   text-decoration: none;
 }
-.movie__genres {
+.movie_genres {
   list-style: none;
   padding: 0;
   margin: 0;
@@ -42,8 +42,8 @@
   flex-wrap: wrap;
   margin: 5px 0px;
 }
-.movie__genres li,
-.movie__year {
+.movie_genres li,
+.movie_year {
   margin-right: 10px;
   font-size: 14px;
 }
